--- a/DataBridgeRework/Views/ConnectionWindow.axaml
+++ b/DataBridgeRework/Views/ConnectionWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:DataBridgeRework.ViewModels"
         xmlns:ui="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
+        xmlns:models="clr-namespace:DataBridgeRework.Utils.Models"
         mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
         x:Class="DataBridgeRework.Views.ConnectionWindow"
         x:DataType="vm:ConnectionWindowViewModel"
@@ -18,25 +19,65 @@
         <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
                     Background="Transparent" />
 
-        <StackPanel Grid.Row="1" Grid.Column="0" Grid.RowSpan="2"
-                    Margin="5">
-            <ListBox x:Name="SavedConnectionsListBox"
-                     SelectionMode="Single" />
-        </StackPanel>
+        <Grid Grid.Row="1" Grid.Column="0" Grid.RowSpan="2"
+              RowDefinitions="Auto *"
+              Margin="5">
+            <RadioButton Grid.Row="0" Classes="Bookmarks"
+                         IsChecked="{Binding IsNewConnection, Mode=OneWay}"
+                         Command="{Binding CreateNewConnectionCommand}">
+                <StackPanel Orientation="Horizontal" Spacing="5">
+                    <ui:IconSourceElement Width="32" Height="32"
+                                          Margin="0 0 5 0"
+                                          IconSource="{StaticResource RemoteDesktop}" />
+                    <TextBlock Text="Новый сервер" VerticalAlignment="Center" />
+                </StackPanel>
+            </RadioButton>
+
+            <ListBox Grid.Row="1" x:Name="SavedConnectionsListBox"
+                     SelectionMode="Single"
+                     ItemsSource="{Binding SavedConnections}"
+                     SelectedIndex="{Binding SelectedConnectionIndex}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate x:DataType="models:ServerConnectionData">
+                        <Grid RowDefinitions="Auto Auto" ColumnDefinitions="Auto * Auto">
+                            <ui:IconSourceElement Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"
+                                                  Width="32" Height="32"
+                                                  Margin="0 0 5 0"
+                                                  IconSource="{StaticResource RemoteDesktop}" />
+                            <TextBlock Grid.Row="0" Grid.Column="1"
+                                       Text="{Binding UserName}" />
+                            <TextBlock Grid.Row="1" Grid.Column="1"
+                                       FontSize="10"
+                                       Text="{Binding HostName}" />
+                            <Button Grid.Row="0" Grid.Column="2" Grid.RowSpan="2"
+                                    Background="Transparent"
+                                    BorderBrush="Transparent"
+                                    VerticalAlignment="Stretch" Padding="2 0"
+                                    Command="{Binding $parent[Window].((vm:ConnectionWindowViewModel)DataContext).DeleteConnectionCommand}"
+                                    CommandParameter="{Binding .}">
+                                <ui:IconSourceElement IconSource="Delete" />
+                            </Button>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Grid>
 
         <StackPanel Grid.Row="1" Grid.Column="1"
                     Spacing="5"
                     Margin="0 5 5 5">
+            
+            
             <StackPanel>
                 <Label Content="Адрес сервера:" Target="HostInput" />
-                <TextBox x:Name="HostInput" Text="{Binding HostName}"
+                <TextBox x:Name="HostInput" Text="{Binding SelectedServerConnection.HostName, UpdateSourceTrigger=LostFocus}"
                          ToolTip.Tip="{Binding $self.Text}" />
             </StackPanel>
 
             <Grid ColumnDefinitions="* Auto">
                 <StackPanel Grid.Column="0">
                     <Label Content="Пользователь:" Target="UserInput" />
-                    <TextBox x:Name="UserInput" Text="{Binding UserName}"
+                    <TextBox x:Name="UserInput" Text="{Binding SelectedServerConnection.UserName, UpdateSourceTrigger=LostFocus}"
                              Margin="0 0 5 0"
                              ToolTip.Tip="{Binding $self.Text}" />
                 </StackPanel>
@@ -44,20 +85,20 @@
                 <StackPanel Grid.Column="1" Width="125">
                     <Label Content="Порт:" Target="PortInput" />
                     <NumericUpDown x:Name="PortInput"
-                                   Value="{Binding Port}"
+                                   Value="{Binding SelectedServerConnection.Port}"
                                    Minimum="1" Maximum="65535" FormatString="0" />
                 </StackPanel>
             </Grid>
 
             <StackPanel>
                 <Label Content="Способ подключения:" />
-                <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Horizontal" Spacing="5">
                     <RadioButton Content="Пароль"
                                  Name="PasswordCheck"
-                                 IsChecked="{Binding SecurityType, Converter={StaticResource SecurityTypeToBoolConverter}, ConverterParameter=Password}" />
+                                 IsChecked="{Binding SelectedServerConnection.SecurityType, Converter={StaticResource SecurityTypeToBoolConverter}, ConverterParameter=Password}" />
                     <RadioButton Content="SSH-ключ"
                                  Name="SshKeyCheck"
-                                 IsChecked="{Binding SecurityType, Converter={StaticResource SecurityTypeToBoolConverter}, ConverterParameter=SshKey}" />
+                                 IsChecked="{Binding SelectedServerConnection.SecurityType, Converter={StaticResource SecurityTypeToBoolConverter}, ConverterParameter=SshKey}" />
                 </StackPanel>
             </StackPanel>
 
@@ -67,7 +108,7 @@
                 <Grid ColumnDefinitions="* Auto">
                     <TextBox Grid.Column="0"
                              x:Name="PasswordInput"
-                             Text="{Binding Password}"
+                             Text="{Binding SelectedServerConnection.Password, UpdateSourceTrigger=LostFocus}"
                              PasswordChar="•"
                              RevealPassword="{Binding IsPressed, ElementName=ViewPassword}"
                              Margin="0 0 5 0" />
@@ -84,7 +125,7 @@
                 <Grid ColumnDefinitions="* Auto">
                     <TextBox Grid.Column="0"
                              x:Name="SshPathInput"
-                             Text="{Binding SshKeyPath}"
+                             Text="{Binding SelectedServerConnection.SshKeyPath, UpdateSourceTrigger=LostFocus}"
                              Margin="0 0 5 0"
                              ToolTip.Tip="{Binding $self.Text}" />
                     <Button Grid.Column="1" VerticalAlignment="Stretch"
@@ -98,7 +139,7 @@
                 <Grid ColumnDefinitions="* Auto">
                     <TextBox Grid.Column="0"
                              x:Name="PassPhraseInput"
-                             Text="{Binding SshKeyPhrase}"
+                             Text="{Binding SelectedServerConnection.SshKeyPhrase, UpdateSourceTrigger=LostFocus}"
                              PasswordChar="•"
                              RevealPassword="{Binding IsPressed, ElementName=ViewPassPhrase}"
                              Margin="0 0 5 0" />
@@ -114,9 +155,9 @@
 
         <UniformGrid Grid.Row="2" Grid.Column="1" Columns="2"
                      Margin="0 5 5 10">
-            <Button Content="Сохранить"
+            <Button Content="{Binding SaveButtonText}"
                     HorizontalAlignment="Left"
-                    Command="{Binding SaveConnectionCommand}" />
+                    Command="{Binding AddConnectionCommand}" />
             <Button Content="Подключиться"
                     Classes="AccentButton"
                     HorizontalAlignment="Right"
