--- a/DataBridgeRework/Views/ExplorerView.axaml
+++ b/DataBridgeRework/Views/ExplorerView.axaml
@@ -5,6 +5,8 @@
              xmlns:vm="clr-namespace:DataBridgeRework.ViewModels"
              xmlns:fa="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
              xmlns:system="clr-namespace:System;assembly=System.Runtime"
+             xmlns:views="clr-namespace:DataBridgeRework.Views"
+             xmlns:models="clr-namespace:DataBridgeRework.Utils.Models"
              mc:Ignorable="d" d:DesignWidth="1000" d:DesignHeight="515"
              x:DataType="vm:ExplorerViewModel"
              x:Class="DataBridgeRework.Views.ExplorerView"
@@ -75,9 +77,10 @@
             <StackPanel Grid.Row="0" Orientation="Vertical" Spacing="2.5" VerticalAlignment="Stretch">
 
                 <!-- Home directory bookmark -->
-                <!-- TODO: Разобраться с преобразованием поля IsChecked -->
                 <RadioButton Classes="Bookmarks" GroupName="Bookmarks"
-                             ToolTip.Tip="{Binding UserHomeDirectory, Mode=OneWay}">
+                             ToolTip.Tip="{Binding UserHomeDirectory, Mode=OneWay}"
+                             Command="{Binding NavigateToCommand}"
+                             CommandParameter="{Binding UserHomeDirectory, Mode=OneWay}">
                     <StackPanel Orientation="Horizontal" Spacing="5">
                         <fa:IconSourceElement Height="16" Width="16"
                                               IconSource="{StaticResource Home}" />
@@ -87,15 +90,21 @@
                                    Width="{Binding $parent[StackPanel].Bounds.Width, Mode=OneWay}"
                                    TextTrimming="CharacterEllipsis" />
                     </StackPanel>
+                    <RadioButton.ContextFlyout>
+                        <fa:FAMenuFlyout>
+                            <fa:MenuFlyoutItem Text="Открыть в новой вкладке"
+                                               IconSource="Open"
+                                               Command="{Binding OpenFolderInNewTabCommand}"
+                                               CommandParameter="{Binding UserHomeDirectory, Mode=OneWay}"/>
+                        </fa:FAMenuFlyout>
+                    </RadioButton.ContextFlyout>
                 </RadioButton>
 
                 <!-- Root directory bookmark -->
                 <RadioButton Classes="Bookmarks" GroupName="Bookmarks"
-                             IsChecked="{Binding CurrentFullPath,
-                                         Converter={StaticResource StringsCompareConverter},
-                                         ConverterParameter='/',
-                                         Mode=OneWay}"
-                             ToolTip.Tip="Корневая директория">
+                             ToolTip.Tip="Корневая директория"
+                             Command="{Binding NavigateToCommand}"
+                             CommandParameter="/">
                     <StackPanel Orientation="Horizontal" Spacing="5">
                         <fa:IconSourceElement Height="16" Width="16"
                                               IconSource="{StaticResource Hdd}" />
@@ -105,11 +114,20 @@
                                    Width="{Binding $parent[StackPanel].Bounds.Width, Mode=OneWay}"
                                    TextTrimming="CharacterEllipsis" />
                     </StackPanel>
+                    <RadioButton.ContextFlyout>
+                        <fa:FAMenuFlyout>
+                            <fa:MenuFlyoutItem Text="Открыть в новой вкладке"
+                                               IconSource="Open"
+                                               Command="{Binding OpenFolderInNewTabCommand}"
+                                               CommandParameter="/"/>
+                        </fa:FAMenuFlyout>
+                    </RadioButton.ContextFlyout>
                 </RadioButton>
 
                 <Separator Margin="15 5" />
             </StackPanel>
 
+            <!-- User bookmarks -->
             <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalAlignment="Stretch">
                 <fa:ItemsRepeater ItemsSource="{Binding Bookmarks, Mode=OneWay}">
                     <fa:ItemsRepeater.Layout>
@@ -118,7 +136,9 @@
                     <fa:ItemsRepeater.ItemTemplate>
                         <DataTemplate x:DataType="system:String">
                             <RadioButton Classes="Bookmarks" GroupName="Bookmarks"
-                                         ToolTip.Tip="{Binding .}">
+                                         ToolTip.Tip="{Binding ., Mode=OneWay}"
+                                         Command="{Binding $parent[views:ExplorerView].((vm:ExplorerViewModel)DataContext).NavigateToCommand}"
+                                         CommandParameter="{Binding ., Mode=OneWay}">
                                 <StackPanel Orientation="Horizontal" Spacing="5">
                                     <fa:IconSourceElement Height="16" Width="16"
                                                           IconSource="{StaticResource FolderIcon}" />
@@ -129,6 +149,18 @@
                                         Width="{Binding $parent[StackPanel].Bounds.Width, Mode=OneWay}"
                                         TextTrimming="CharacterEllipsis" />
                                 </StackPanel>
+                                <RadioButton.ContextFlyout>
+                                    <fa:FAMenuFlyout>
+                                        <fa:MenuFlyoutItem Text="Открыть в новой вкладке"
+                                                           IconSource="Open"
+                                                           Command="{Binding $parent[views:ExplorerView].((vm:ExplorerViewModel)DataContext).OpenFolderInNewTabCommand}"
+                                                           CommandParameter="{Binding ., Mode=OneWay}"/>
+                                        <fa:MenuFlyoutItem Text="Открепить"
+                                                           IconSource="UnPin"
+                                                           Command="{Binding $parent[views:ExplorerView].((vm:ExplorerViewModel)DataContext).RemoveBookmarkCommand}"
+                                                           CommandParameter="{Binding ., Mode=OneWay}"/>
+                                    </fa:FAMenuFlyout>
+                                </RadioButton.ContextFlyout>
                             </RadioButton>
                         </DataTemplate>
                     </fa:ItemsRepeater.ItemTemplate>
@@ -176,4 +208,22 @@
         </Border>
     </Grid>
 
+    <UserControl.Styles>
+        <Style Selector="DataGrid#FilesPresenter DataGridRow">
+            <Setter Property="ContextFlyout" x:DataType="models:RemoteFileModel">
+                <fa:FAMenuFlyout>
+                    <fa:MenuFlyoutItem Text="Открыть в новой вкладке"
+                                       IconSource="Open"
+                                       Command="{Binding $parent[views:ExplorerView].((vm:ExplorerViewModel)DataContext).OpenFolderInNewTabCommand}"
+                                       CommandParameter="{Binding FullPath, Mode=OneWay}"
+                                       IsVisible="{Binding IsDirectory}"/>
+                    <fa:MenuFlyoutItem Text="Закрепить"
+                                       IconSource="Pin"
+                                       Command="{Binding $parent[views:ExplorerView].((vm:ExplorerViewModel)DataContext).AddBookmarkCommand}"
+                                       CommandParameter="{Binding FullPath, Mode=OneWay}"
+                                       IsVisible="{Binding IsDirectory}"/>
+                </fa:FAMenuFlyout>
+            </Setter>
+        </Style>
+    </UserControl.Styles>
 </UserControl>
